guides/v2.1/cloud/basic-information/cloud-plans.md
---
group: cloud
title: 订阅和计划
version: 2.1
github_link: cloud/basic-information/cloud-plans.md
---

{{site.data.var.ece}} includes the following plans with different infrastructures for smaller to larger stores and supported products. For a breakdown of the plans and to start your [free 30-day trial](https://magento.com/trial){:target="\_blank"}, see our [Plan Comparison](https://magento.com/trial/plans-comparison){:target="\_blank"}.

<table>
  <tbody>
    <tr>
      <td class="blank"></td>
      <th>Starter</th>
      <th>Pro</th>
    </tr>
    <tr>
      <td>Core features</td>
      <td>
        <ul>
          <li>All Magento 2 core features</li>
          <li>PayPal Onboarding Tool</li>
        </ul>
      </td>
      <td>
        <ul>
          <li>All Magento 2 core features</li>
          <li>PayPal Onboarding Tool</li>
          <li>
            <a href="https://magento.com/business-needs/b2b-commerce">B2B module</a>
          </li>
          <li>
            <a href="https://magento.com/products/business-intelligence/essentials">BI Essentials</a>
          </li>
        </ul>
      </td>
    </tr>
    <tr>
      <td>Infrastructure and deployment</td>
      <td>
        <ul>
          <li>Platform-as-a-service (PaaS) based Production, Staging, and development environments (4 total active environments) optimized for Magento</li>
          <li>Continuous cloud integration tools with unlimited users</li>
          <li>Fastly Content Delivery Network (CDN) and DDoS protection with generous bandwidth allowances</li>
          <li>
            <a href="{{ page.baseurl }}/cloud/project/new-relic.html">New Relic APM</a> (Performance Monitoring) on 3 branches: <code>master</code> and 2 of your choice
          </li>
          <li>
            <a href="{{ page.baseurl }}/cloud/project/project-integrate-blackfire.html">Blackfire.io</a> Enterprise (Performance Testing)
          </li>
        </ul>
      </td>
      <td>
        <ul>
          <li>Platform-as-a-service (PaaS) based Integration development environments (8 total active environments) optimized for Magento</li>
          <li>Infrastructure-as-a-Service (IaaS) dedicated for Production and Staging</li>
          <li>Continuous cloud integration tools with unlimited users</li>
          <li>Fastly Content Delivery Network (CDN) and DDoS protection with generous bandwidth allowances</li>
          <li>
            <a href="{{ page.baseurl }}/cloud/project/new-relic.html">New Relic APM</a> (Performance Monitoring) on 3 branches: Integration <code>master</code>, Staging, and Production
          </li>
          <li>
            <a href="{{ page.baseurl }}/cloud/project/project-integrate-blackfire.html">Blackfire.io</a> Enterprise (Performance Testing)
          </li>
        </ul>
      </td>
    </tr>
    <tr>
      <td>24x7 email support</td>
      <td>24x7 monitoring and email support for the core application and the cloud infrastructure</td>
      <td>24x7 monitoring and email support for the core application and the cloud infrastructure</td>
    </tr>
    <tr>
      <td>Business Intelligence</td>
      <td class="blank"></td>
      <td>Magento Business Intelligence Essentials giving you full visibility into your data with 75 reports and 5 dashboards available out of the box</td>
    </tr>
    <tr>
      <td>High availability infrastructure</td>
      <td class="blank"></td>
      <td>High availability architecture with a three-server setup in the underlying Infrastructure-as-a-Service (IaaS) to provide enterprise grade reliability and availability</td>
    </tr>
    <tr>
      <td>Dedicated hardware</td>
      <td class="blank"></td>
      <td>Isolated and dedicated hardware setup in the underlying Infrastructure-as-a-Service (IaaS) to provide even higher levels of reliability and availability</td>
    </tr>
    <tr>
      <td>Dedicated Launch Manager</td>
      <td class="blank"></td>
      <td>Dedicated technical account management for the initial launch period, starting with your subscription until your initial site launch</td>
    </tr>
  </tbody>
</table>

## Additional options {#extras}
To further customize your {{site.data.var.ece}} project and account, you can purchase additional options.

### Domain-Validated SSL (HTTP) certificate {#ssl}
If you don't want to use the shared SSL certificate, you can purchase this option as part of your subscription. The cost of the service includes adding and deploying the Domain-Validated SSL certificate to all Fastly servers and services.

This service is an additional cost for your contract.

### AWS Managed VPN Connection Service access {#vpn}
If you need access to your own Virtual Private Network (VPN) to access your {{site.data.var.ee}} environment, you can purchase this option to gain access to the AWS Managed VPN Connection Service. We will provide information required for configurations including the required IPs and modes.

This service is an additional cost for your contract. VPN configurations require technical resources and requirements for configuring. For information on the AWS service, see their [AWS Managed VPN Connections](http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/VPC_VPN.html){:target="\_blank"} and  [VPN Connections](http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/vpn-connections.html){:target="\_blank"}.
